fix multiple chips wrap and icon demo

--- a/components/chip/Chip.scss
+++ b/components/chip/Chip.scss
@@ -2,6 +2,7 @@
 .Chip-wrapper {
   cursor: text;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .Chip-input {
